rag进行了重叠，长期记忆进行了重构